# perf-event

./: .gitignore  Cargo.toml  README.md  TODO.org  build.rs  coverage.sh  wrapper.h
.github/actions/cargo-sweep/: action.yml
.github/workflows/: cargo.yml  dispatch.yml  master.yml
examples/: big-group.rs  group.rs  insns-for-pid.rs  println-cache-misses.rs  println-cpi.rs  println.rs  sample.rs
perf-event/: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
perf-event-open-sys/: Cargo.toml  README.md  RELEASE-NOTES.md  regenerate.sh  wrapper.h
perf-event-open-sys/regenerate/: .gitignore  bindings_header.rs  fetch-kernel-headers.sh  regenerate.sh
perf-event-open-sys/src/: attr.rs  bindings.rs  bindings_aarch64.rs  bindings_armv7.rs  bindings_armv7l.rs  bindings_header.rs  bindings_loongarch64.rs  bindings_powerpc64.rs  bindings_riscv64.rs  bindings_riscv64gc.rs  bindings_x86_64.rs  functions.rs  lib.rs  version
perf-event/examples/: big-group.rs  group.rs  insns-for-pid.rs  kprobe.rs  locality.rs  println-cpi-raw.rs  println-cpi.rs  println.rs
perf-event/src/: builder.rs  counter.rs  data.rs  events.rs  flags.rs  group.rs  group_data.rs  hooks.rs  lib.rs  sampler.rs
perf-event/src/events/: breakpoint.rs  cache.rs  hardware.rs  mod.rs  probe.rs  software.rs  tracepoint.rs
perf-event/src/samples/: mmap.rs  mod.rs
perf-event/tests/: breakpoint.rs  sampling-tests.rs
perf-event/tests/sampling/: mmap.rs  mod.rs
src/: event_kind.rs  events.rs  lib.rs  sample.rs  syscalls.rs
