[package]
name = "perf-event"
version = "0.1.1"
authors = ["Jim Blandy <jimb@red-bean.com>"]
repository = "https://github.com/jimblandy/perf-event.git"
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"
description = "A Rust interface to Linux performance monitoring"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.52"
