[package]
name = "perf-event-open-sys"
version = "4.0.0"
description = """
Unsafe, direct bindings for Linux's perf_event_open system call, with associated
types and constants.
"""
license = "MIT OR Apache-2.0"
authors = ["Jim Blandy <jimb@red-bean.com>"]
repository = "https://github.com/jimblandy/perf-event-open-sys.git"
edition = "2018"
readme = "README.md"
documentation = "https://docs.rs/perf-event-open-sys/"
keywords = ["linux", "perf"]
categories = [
    "external-ffi-bindings",
    "development-tools::profiling",
    "hardware-support",
    "os::linux-apis"
]

[dependencies]
libc = "0.2"
