[package]
name = "perf-event-open-sys2"
version = "5.0.3"
description = """
Unsafe, direct bindings for Linux's perf_event_open system call, with associated
types and constants.
"""
license = "MIT OR Apache-2.0"
authors = ["Sean Lynch <sean@lynches.ca>", "Jim Blandy <jimb@red-bean.com>"]
repository = "https://github.com/Phantomical/perf-event.git"
edition = "2018"
readme = "README.md"
documentation = "https://docs.rs/perf-event-open-sys2/"
keywords = ["linux", "perf"]
categories = [
    "external-ffi-bindings",
    "development-tools::profiling",
    "hardware-support",
    "os::linux-apis"
]

[lib]
name = "perf_event_open_sys"

[dependencies]
libc = "0.2"
