[package]
name = "perf-event"
version = "0.4.8"
description = "A Rust interface to Linux performance monitoring"
license = "MIT OR Apache-2.0"
authors = ["Jim Blandy <jimb@red-bean.com>"]
repository = "https://github.com/jimblandy/perf-event.git"
edition = "2018"
readme = "README.md"
documentation = "https://docs.rs/perf-event/"
keywords = ["linux", "perf"]
categories = [
    "development-tools::profiling",
    "hardware-support",
    "os::linux-apis"
]

[features]
# Enable syscall interception hooks for mock testing and logging.
hooks = []
default = ["hooks"]

[dependencies]
bitflags = "1.3"
libc = "0.2"

[dependencies.perf-event-open-sys]
path = "../perf-event-open-sys"
version = "4.0"
