[package]
name = "perf-event2"
version = "0.4.8"
description = "A Rust interface to Linux performance monitoring"
license = "MIT OR Apache-2.0"
authors = ["Sean Lynch <sean@lynches.ca>", "Jim Blandy <jimb@red-bean.com>"]
repository = "https://github.com/Phantomical/perf-event.git"
edition = "2018"
readme = "README.md"
documentation = "https://docs.rs/perf-event2/"
keywords = ["linux", "perf"]
categories = [
    "development-tools::profiling",
    "hardware-support",
    "os::linux-apis"
]

[lib]
name = "perf_event"

[features]
# Enable syscall interception hooks for mock testing and logging.
hooks = []
default = ["hooks"]

[dependencies]
bitflags = "1.3"
libc = "0.2"

[dependencies.perf-event-open-sys2]
path = "../perf-event-open-sys"
version = "5.0"
