[package]
name = "perf-event2"
version = "0.6.1"
description = "A Rust interface to Linux performance monitoring"
license = "MIT OR Apache-2.0"
authors = ["Sean Lynch <sean@lynches.ca>", "Jim Blandy <jimb@red-bean.com>"]
repository = "https://github.com/Phantomical/perf-event.git"
edition = "2018"
readme = "README.md"
documentation = "https://docs.rs/perf-event2/"
keywords = ["linux", "perf"]
categories = [
    "development-tools::profiling",
    "hardware-support",
    "os::linux-apis"
]

[lib]
name = "perf_event"

[features]
# Enable syscall interception hooks for mock testing and logging.
hooks = []

[dependencies]
bitflags = "2.1"
c-enum = "0.1"
libc = "0.2"
memmap2 = "0.6"
perf-event-data = "0.1.1"

[dependencies.perf-event-open-sys2]
version = "5.0"

[dev-dependencies]
nix = { version = "0.26.1", features = ["process", "feature"] }
